syntax = "proto3";
package market;

message FakeMarketDataRequest{
    string symbol = 1;
}


message FakeMarketDataResponse {
    string symbol = 1;
    bytes timestamp = 2;
}

service Market {
    rpc GetFakeMarketData(FakeMarketDataRequest) returns (stream FakeMarketDataResponse);
}

